force-app/main/default/objects/ProjectsEk__c/ProjectsEk__c.object-meta.xml
<CustomObject>
    <description>Created by: Emmanuel Kanu</description>
    <label>ProjectsEk</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>