force-app/main/default/objects/ProjectsEk__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Created by: EK</description>
    <label>Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>