force-app/main/default/objects/ProjectsEk__c/fields/Description_field__c.field-meta.xml
<CustomField>
    <fullName>Description_field__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>