force-app/main/default/objects/ProjectsEk__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>Created by: EK
This is the employee of Woodshop Company.</description>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Christopher Smith</fullName>
            </value>
            <value>
                <fullName>Abera Gezmu</fullName>
            </value>
            <value>
                <fullName>Celine Pham</fullName>
            </value>
            <value>
                <fullName>Lupa Brown</fullName>
            </value>
            <value>
                <fullName>Himadri Sinha</fullName>
            </value>
            <value>
                <fullName>Karma Drukpa</fullName>
            </value>
            <value>
                <fullName>Kehali Demsash</fullName>
            </value>
            <value>
                <fullName>Mimia Chen</fullName>
            </value>
            <value>
                <fullName>Rhieanne Saumnders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>