force-app/main/default/objects/ProjectsEk__c/fields/Types_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Project__c</fullName>
    <description>Created by: EK</description>
    <label>Types of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Wall Shelf</fullName>
            </value>
            <value>
                <fullName>Porch or Garden Table</fullName>
            </value>
            <value>
                <fullName>Candle Holder</fullName>
            </value>
            <value>
                <fullName>Sofa Sleeve and Cup Holder</fullName>
            </value>
            <value>
                <fullName>Address Number Wall Planter</fullName>
            </value>
            <value>
                <fullName>Magazine Rack</fullName>
            </value>
            <value>
                <fullName>Backyard Lounder</fullName>
            </value>
            <value>
                <fullName>Workbench</fullName>
            </value>
            <value>
                <fullName>Wine Rack</fullName>
            </value>
            <value>
                <fullName>Kitchen Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>