force-app/main/default/objects/ProjectsEk__c/validationRules/Percentage_Complete_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_Complete_Limit</fullName>
    <active>true</active>
    <description>Created by: EK</description>
    <errorConditionFormula>Percentage_Complete__c &gt; 1.00</errorConditionFormula>
    <errorDisplayField>Percentage_Complete__c</errorDisplayField>
    <errorMessage>Percentage Complete cannot exceed 100%.</errorMessage>
</ValidationRule>